--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -44,8 +44,8 @@
           <label class="sr-only" id="billing-addresses-label" role="none">Billing Address</label>
           @if (billingAddresses.length > 0) {
             <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3" role="none">
-              @for(baddr of billingAddresses; track baddr) {
-                <app-billing-address [data]="baddr" (selectedEvent)="onSelected(baddr)" (deletedEvent)="onDeleted(baddr)"></app-billing-address>
+              @for(baddr of billingAddresses; track baddr.id) {
+                <app-billing-address [data]="baddr" (selectedEvent)="onSelected($event)" (deletedEvent)="onDeleted($event)"></app-billing-address>
               }
             </div>
           } @else {
