--- a/src/app/shared/billing-account-form/billing-account-form.component.html
+++ b/src/app/shared/billing-account-form/billing-account-form.component.html
@@ -39,27 +39,29 @@
     </div>
     <div>
         <label for="phoneNumber" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._phone' | translate }}</label>
-        <div class="relative flex items-center">
-            <button (click)="prefixCheck=!prefixCheck" class="mb-2 flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-s-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100" type="button">
-                {{phonePrefix.flag}} {{phonePrefix.code}}
-                <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
-            </button>
-            @if(prefixCheck==true){
-                <div class="absolute bottom-12 right-0 z-20 max-h-48 w-full bg-white divide-y divide-gray-100 rounded-lg shadow overflow-y-auto">
-                    <ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdown-phone-button">
-                        <li>
-                            @for(pref of prefixes;track pref.code){
-                                <button type="button" (click)="selectPrefix(pref)" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
-                                    <div class="inline-flex items-center">
-                                        {{pref.text}}
-                                    </div>
-                                </button>
-                            }
-                        </li>
-                    </ul>
-                </div>
-            }
-        <input id="phoneNumber" formControlName="telephoneNumber" name="phoneNumber" type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+        <div class="w-full">
+            <div class="relative flex items-center">
+                <button (click)="prefixCheck=!prefixCheck" class="mb-2 flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-s-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100" type="button">
+                    {{phonePrefix.flag}} {{phonePrefix.code}}
+                    <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
+                </button>
+                @if(prefixCheck==true){
+                    <div class="absolute bottom-12 right-0 z-20 max-h-48 w-full bg-white divide-y divide-gray-100 rounded-lg shadow overflow-y-auto">
+                        <ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdown-phone-button">
+                            <li>
+                                @for(pref of prefixes;track pref.code){
+                                    <button type="button" (click)="selectPrefix(pref)" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
+                                        <div class="inline-flex items-center">
+                                            {{pref.text}}
+                                        </div>
+                                    </button>
+                                }
+                            </li>
+                        </ul>
+                    </div>
+                }  
+                <input id="phoneNumber" formControlName="telephoneNumber" name="phoneNumber" type="text" [ngClass]="billingForm.get('telephoneNumber')?.errors?.['invalidPhoneNumber'] == true ? 'border-red-600' : 'border-gray-300'" class="mb-2 bg-gray-50 border text-gray-900 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+            </div>     
         </div>
     </div>
     <div class="flex w-full justify-end col-span-2">
@@ -75,3 +77,23 @@
 
     </div>
   </form>
+
+<!-- INFO (CREATED/UPDATED/ERROR) TOAST -->
+@if (toastVisibility) {
+    <div id="toast-warning" class="flex m-2 items-center w-fit max-w-xs p-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800 fixed top-1/2 right-0 z-50 justify-center" role="alert">
+        <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 bg-red-700 text-red-200 rounded-lg">
+            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM10 15a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 0 1-2 0V6a1 1 0 0 1 2 0v5Z"/>
+            </svg>
+        </div>
+        @if(billingForm.get('telephoneNumber')?.errors?.['invalidPhoneNumber'] == true){
+            <div class="ms-3 text-sm font-normal">{{ 'BILLING._invalid_phone' | translate }}</div>
+        }        
+        <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700" data-dismiss-target="#toast-warning" aria-label="Close">
+            <span class="sr-only">Close</span>
+            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+            </svg>
+        </button>
+    </div>
+}
