--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -33,21 +33,21 @@
                     <div class="m-4 grid grid-cols-2 gap-4">
                         <div>
                             <span class="font-bold">{{ 'PROFILE._user_id' | translate }}:</span>
-                            <input type="text" id="username" class="mb-2 bg-gray-300 border border-gray-400  text-primary-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 cursor-not-allowed" value="{{profile.externalReference[0].name}}" disabled readonly>    
+                            <input type="text" id="username" class="mb-2 bg-gray-300 border border-gray-400  text-primary-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 cursor-not-allowed" value="{{profile.externalReference[0].name}}" disabled readonly>
                             <span class="font-bold">{{ 'PROFILE._email' | translate }}:</span>
-                            <input type="text" id="email" class="mb-2 bg-gray-300 border border-gray-400  text-primary-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 cursor-not-allowed" value="{{email}}" disabled readonly>    
+                            <input type="text" id="email" class="mb-2 bg-gray-300 border border-gray-400  text-primary-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 cursor-not-allowed" value="{{email}}" disabled readonly>
                         </div>
                         <div>
                             <span class="font-bold">{{ 'PROFILE._token' | translate }}:</span>
-                            <input type="text" id="token" class="mb-2 bg-gray-300 border border-gray-400  text-primary-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 cursor-not-allowed" value="{{token}}" disabled readonly>    
-                        </div>                    
+                            <input type="text" id="token" class="mb-2 bg-gray-300 border border-gray-400  text-primary-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 cursor-not-allowed" value="{{token}}" disabled readonly>
+                        </div>
                     </div>
                     <h5 class="md:text-3xl lg:text-4xl m-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'PROFILE._profile' | translate }}:</h5>
                     <hr class="h-px mr-4 ml-4 bg-primary-100 border-0">
                     <form class="m-4 grid grid-cols-2 gap-4" [formGroup]="userProfileForm">
                         <div>
                             <label for="user-name" class="font-bold">{{ 'PROFILE._name' | translate }}:</label>
-                            <input formControlName="name" type="user-name" id="user-name" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />    
+                            <input formControlName="name" type="text" id="user-name" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                             <label for="treatment" class="font-bold">{{ 'PROFILE._treatment' | translate }}:</label>
                             <select id="treatment" formControlName="treatment" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="">I'd rather not say</option>
@@ -66,7 +66,7 @@
                         </div>
                         <div>
                             <label for="lastname" class="font-bold">{{ 'PROFILE._lastname' | translate }}:</label>
-                            <input type="lastname" formControlName="lastname" id="lastname" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />    
+                            <input type="text" formControlName="lastname" id="lastname" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                             <label for="marital-status" class="font-bold">{{ 'PROFILE._marital_status' | translate }}:</label>
                             <select id="marital-status" formControlName="maritalstatus" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="">I'd rather not say</option>
@@ -77,18 +77,18 @@
                                 <option value="Widowed">Widowed</option>
                             </select>
                             <label for="nacionality" class="font-bold">{{ 'PROFILE._nacionality' | translate }}:</label>
-                            <input type="nacionality" formControlName="nacionality" id="nacionality" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />    
-                        </div>                    
+                            <input type="text" formControlName="nacionality" id="nacionality" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+                        </div>
                     </form>
                     <h5 class="md:text-3xl lg:text-4xl m-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'PROFILE._birthdate' | translate }}:</h5>
                     <hr class="h-px mr-4 ml-4 bg-primary-100 border-0">
                     <form class="m-4 grid grid-cols-2 gap-4" [formGroup]="userProfileForm">
                         <div>
                             <label for="birthdate" class="font-bold">{{ 'PROFILE._date' | translate }}:</label>
-                            <input type="birthdate" formControlName="birthdate" id="birthdate" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="XX/XX/XXXX" />
-  
+                            <input datepicker type="date" placeholder="Select date"  formControlName="birthdate" id="birthdate" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+
                             <label for="city" class="font-bold">{{ 'PROFILE._city' | translate }}:</label>
-                            <input type="city" formControlName="city" id="city" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />    
+                            <input type="text" formControlName="city" id="city" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                         </div>
                         <div class="align-items-bottom align-bottom">
                             <label for="country" class="font-bold">{{ 'PROFILE._country' | translate }}:</label>
@@ -97,8 +97,8 @@
                                 @for(country of countries; track country.code){
                                     <option value="{{country.code}}">{{country.name}}</option>
                                 }
-                            </select>   
-                        </div> 
+                            </select>
+                        </div>
                     </form>
                     <div class="flex w-full justify-end">
                         <button type="button"  (click)="updateProfile()" class="m-2 flex w-fit justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
@@ -111,7 +111,7 @@
                 <div class="place-items-center">
                   @for (order of orders; track order.id; let idx = $index) {
                       <div class="w-full h-fit bg-secondary-50 rounded-lg dark:border-gray-700 border-secondary-50 border mb-4">
-  
+
                           <div class="p-4 overflow-hidden border-b border-b-primary-100 border-b-2 shadow-lg rounded-t-lg">
                             <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{order?.orderDate | date:'EEEE, dd/MM/yy, HH:mm'}}</h5>
                             <ul class="w-full space-y-1 list-disc list-inside dark:text-gray-600">
@@ -120,7 +120,7 @@
                               <li><span class="font-bold">{{ 'PRODUCT_INVENTORY._priority' | translate }}: </span> {{order.priority}}</li>
                             </ul>
                           </div>
-                        
+
                           <div class="bg-cover bg-right-bottom bg-opacity-25 rounded-lg" style="background-image: url(assets/logos/dome-logo-element-colour.png)">
                             <div class="px-5 py-5 bg-secondary-50/95 rounded-lg">
                               @for(item of order.productOrderItem; track item.id){
@@ -145,7 +145,7 @@
                       </div>
                   } @empty {
                     <div class="min-h-19 dark:text-gray-600 text-center">{{ 'PRODUCT_INVENTORY._not_found' | translate }}.</div>
-                  } 
+                  }
               </div>
               }
               @if(show_billing){
@@ -192,13 +192,13 @@
                                             <button (click)="toggleEditBill(bill);$event.stopPropagation();" type="button" class="text-white bg-primary-100 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
                                                 <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                                                     <path fill-rule="evenodd" d="M14 4.182A4.136 4.136 0 0 1 16.9 3c1.087 0 2.13.425 2.899 1.182A4.01 4.01 0 0 1 21 7.037c0 1.068-.43 2.092-1.194 2.849L18.5 11.214l-5.8-5.71 1.287-1.31.012-.012Zm-2.717 2.763L6.186 12.13l2.175 2.141 5.063-5.218-2.141-2.108Zm-6.25 6.886-1.98 5.849a.992.992 0 0 0 .245 1.026 1.03 1.03 0 0 0 1.043.242L10.282 19l-5.25-5.168Zm6.954 4.01 5.096-5.186-2.218-2.183-5.063 5.218 2.185 2.15Z" clip-rule="evenodd"/>
-                                                </svg>                                                                                                                                       
+                                                </svg>
                                             </button>
                                             <button (click)="toggleDeleteBill(bill);$event.stopPropagation();" type="button" class="text-white bg-red-800 hover:bg-red-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
                                                 <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                                                     <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd"/>
-                                                  </svg>                                                                                                                                     
-                                            </button>                                              
+                                                  </svg>
+                                            </button>
                                         </td>
                                     </tr>
                                 }
@@ -229,7 +229,7 @@
                 </button>
             </div>
             <!-- Modal body -->
-            <div class="w-full h-full">                
+            <div class="w-full h-full">
                <app-billing-account-form [billAcc]="billToUpdate"></app-billing-account-form>
             </div>
         </div>
@@ -251,7 +251,7 @@
                 </button>
             </div>
             <!-- Modal body -->
-            <div class="w-full h-full">                
+            <div class="w-full h-full">
                 <div class="grid h-full grid-cols-2 gap-5 m-4">
                     <div class="col-span-2">
                         <label for="title" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._title' | translate }}</label>
@@ -302,7 +302,7 @@
                         </p>
                     </div>
                     <div>
-                        <label for="phoneNumber" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._phone' | translate }}</label>                    
+                        <label for="phoneNumber" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._phone' | translate }}</label>
                         <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                             {{billToDelete.telephoneNumber}}
                         </p>
